

1.2
* Remove duplicated URLs
* Show history by Control-h

1.1
* Block/unblock/subscribe/unsubscribe actions
* Load latest videos from subscriptions by selecting "Channels"
* Delete videos
* Add actions for external URL
* Command-line management
* Refactor code

1.0
* First release