@@ -3,6 +3,8 @@ The following hotkeys are supported:
 Control-w, Control-q - Quit
 Control-d - Download selected file(s)
 Control-p - Play selected file(s)
-Control-h - Show download history
+Control-h, Alt-h - Show download history
 Shift-Delete - Delete selected file(s)
+Alt-c - Show new videos
+Alt-t - Show Trending
 Escape (on the main window) - Minimize
