@@ -3,6 +3,8 @@ Yatube - программа для навигации по Youtube и загру
 Control-w, Control-q - Выйти
 Control-d - Загрузить выбранный(е) файл(ы)
 Control-p - Воспроизвести выбранный(е) файл(ы)
-Control-h - Показать историю загрузок
+Control-h, Alt-h - Показать историю загрузок
 Shift-Delete - Удалить выбранный(е) файл(ы)
+Alt-c - Показать новые видео
+Alt-t - Показать раздел "Популярное"
 Escape (на главном окне) - Свернуть
