@@ -6,6 +6,7 @@ Alex Boyko
 Amway921WOT
 Artem Tarasov MMA
 Borsch
+Big Salad
 DANIK
 DILLERON ★
 D.K. Inc.
